--- a/medline/pyproject.toml
+++ b/medline/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "alembic>=1.15.2",
     "fastapi>=0.115.12",
     "playwright>=1.52.0",
+    "pydantic-settings>=2.9.1",
     "python-dotenv>=1.1.0",
     "sqlalchemy>=2.0.40",
 ]
