--- a/medline/pyproject.toml
+++ b/medline/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "pydantic-settings>=2.9.1",
     "python-dotenv>=1.1.0",
     "sqlalchemy>=2.0.40",
+    "sqlmodel>=0.0.24",
 ]
 authors=["50-Course <eridotdev@proton.me>"]
 includes=[ {include= "src"} ]
