--- a/medline/pyproject.toml
+++ b/medline/pyproject.toml
@@ -6,10 +6,12 @@ readme = "README.md"
 requires-python = ">=3.13.3"
 dependencies = [
     "alembic>=1.15.2",
+    "beautifulsoup4>=4.13.4",
     "fastapi>=0.115.12",
     "playwright>=1.52.0",
     "pydantic-settings>=2.9.1",
     "python-dotenv>=1.1.0",
+    "requests>=2.32.3",
     "sqlalchemy>=2.0.40",
     "sqlmodel>=0.0.24",
 ]
