--- a/medline/pyproject.toml
+++ b/medline/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "fastapi>=0.115.12",
     "openpyxl>=3.1.5",
     "pandas>=2.2.3",
+    "pillow>=11.2.1",
     "playwright>=1.52.0",
     "playwright-stealth>=1.0.6",
     "pydantic-settings>=2.9.1",
