--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -27,7 +27,7 @@ jobs:
 
       - name: Install project dependencies with uv
         run: |
-          uv pip install --system
+          uv pip install --system --group default
           # uv pip install --system -r requirements.txt || uv venv && uv pip install --system
 
       - name: Install Playwright + dependencies
