--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -27,6 +27,7 @@ jobs:
 
       - name: Install project dependencies with uv
         run: |
+          cd medline
           uv pip install --system --group default
           # uv pip install --system -r requirements.txt || uv venv && uv pip install --system
 
@@ -36,6 +37,7 @@ jobs:
 
       - name: Run scraper script
         run: |
+          cd src
           python -m scrapper.async_scrapper --headless --to-excel
 
       - name: Upload Excel output
